bug fixes
removed overlapping css between components

--- a/css/ScaleLoader.css
+++ b/css/ScaleLoader.css
@@ -1,35 +1,37 @@
-.spinner {
+.scale-spinner {
+  /* margin: 100px auto; */
   width: 50px;
-  height: 50px;
+  height: 40px;
+  text-align: center;
   font-size: 10px;
 }
 
-.spinner > div {
+.scale-spinner > div {
+  /* background-color: red; */
   height: 100%;
-  width: 5px;
+  width: 6px;
   display: inline-block;
-  margin-left: 1px;
-  margin-right: 1px;
+
   -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
   animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
 
-.spinner .rect2 {
+.scale-spinner .rect2 {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
 
-.spinner .rect3 {
+.scale-spinner .rect3 {
   -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
 
-.spinner .rect4 {
+.scale-spinner .rect4 {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
 
-.spinner .rect5 {
+.scale-spinner .rect5 {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
 }
